# notes-buddy-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
backfill_db/: backfill_search_vector.py
documents/: admin.py  models.py  serializers.py  tasks.py  tasks_summary.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_document_extracted_text_document_file_type.py  0003_documentchunk.py  0004_document_detailed_summary_document_short_summary_and_more.py  0005_summaryhistory.py  0006_remove_summaryhistory_summary_text_and_more.py  0007_documentchunk_search_vector_and_more.py  0008_document_total_chunks.py
documents/serializers/: serializers.py  serializers_summary.py  serializers_summary_history.py
documents/urls/: urls.py  urls_summary.py  urls_summary_history.py
documents/utils/: chunking.py  embeddings.py  extract_text.py
documents/views/: views.py  views_summary.py  views_summary_history.py
health/: views.py
notes-buddy-frontend/: index.html  package.json
notes-buddy-frontend/src/: App.jsx
notes-buddy-frontend/src/api/: axios.js  documents.js
notes-buddy-frontend/src/auth/: AuthContext.jsx  ProtectedRoute.jsx
notes_buddy/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
notes_buddy/core/: logging.py  middleware.py
search/: urls.py  views.py
search/prompts/: answer_prompt.txt
search/services/: context_compression.py  query_rewrite.py  search_engine.py
test_scripts/: test_rag.py  test_search_vector.py
users/: serializers.py  urls.py  views.py
(+8 files in other folders)
